# cookbook

./: .gitignore  Dockerfile  README.MD  docker-compose.dev.yaml  env.sample  pyproject.toml
config/: settings.py  urls.py
recipe/: admin.py  forms.py  models.py  service.py  tests.py  urls.py  views.py
recipe/migrations/: 0001_initial.py
recipe/templates/recipe/: recipe.html
