[tool.poetry]
name = "poetry install"
version = "0.1.0"
description = ""
authors = ["Vladislav_Poroshin <vld.poroshin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
